--- a/client/src/Components/dashboard/Sidebar.css
+++ b/client/src/Components/dashboard/Sidebar.css
@@ -2,12 +2,11 @@
     display: flex;
     flex-direction: column;
     gap: 2.3rem;
-    height: 94vh;
+    height: 100vh;
 
 }
 .icon{
     font-size:  1.4rem;
-
 }
 .menu-list{
     display: flex;
@@ -33,3 +32,69 @@
     background-color: rgb(188, 7, 7);
     color: white;
 }
+
+.sign-out{
+    text-decoration: none;
+    color: black;
+}
+
+.profile{
+    flex: 1;
+}
+
+.profile-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+}
+
+.dash-head{
+    margin-top: 20px;
+    padding: 20px;
+    font-size: 35px;
+}
+
+.edit{
+    background: #dde6ed;
+    padding: 12px;
+    border-radius: 10px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.edit .icon{
+    font-size: 20px;
+    transition: 0.5s, ease-in-out;
+}
+
+.pro-container{
+    font-size: 40px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: rgb(232, 234, 235);
+    border-radius: 10px;
+    width: 200px;
+    margin-left: 30px;
+}
+
+.user-name{
+    font-size: 18px;
+    padding-top: 25px;
+}
+
+.user-detail{
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
