--- a/client/src/Components/courseAdvising/courseAdvising.css
+++ b/client/src/Components/courseAdvising/courseAdvising.css
@@ -59,3 +59,21 @@ table, th, td {
 input{
     background-color: rgb(242, 242, 242);
 }
+
+h1, h2 {
+    text-align: center;
+    color: #444;
+  }
+  
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  
+  h2 {
+    margin: 30px 0 15px;
+    font-size: 1.5rem;
+    border-bottom: 2px solid #007bff;
+    display: inline-block;
+    padding-bottom: 5px;
+  }
