--- a/client/src/Components/adminView/AdminView.css
+++ b/client/src/Components/adminView/AdminView.css
@@ -55,6 +55,6 @@
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Increase shadow for lifted effect */
 }
 
-.single-record{
+input{
     color: #000;
 }
